# OOP

./: .coverage  README.md  pyproject.toml
htmlcov/: index.html
src/: category.py  main.py  order.py  product.py
tests/: conftest.py  test_category.py  test_order.py  test_product.py
