[tool.poetry]
name = "oop"
version = "0.1.0"
description = ""
authors = ["Vladimir Inozemtsev <vladimir.inozemtzev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
pandas = "^2.2.3"
coverage = "^7.6.1"

[tool.flake8]
max-line-length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
     \.git
  )/
)
'''
